[tool.poetry]
name = "fly2p"
version = "0.2.2"
description = "Tools for analyzing 2p (calcium) imaging data collected in flies (or other insects)."
readme = "README_pypi.md"
authors = ["hjmh <hjmhaberkern@gmail.com>"]
license = "MIT"

exclude = ["**/sample/*","**/sample/**/*","**/scripts/*"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.3"
topas2numpy = "^0.2.0"
h5py = "^3.1.0"
scanimage-tiff-reader = ">=1.4.1"
scikit-image = "^0.19.3"
napari = "^0.4.3"
Shapely = "^1.7.1"
scipy = "^1.6.0"
scikit-learn = "^1.1.3"
xarray = "^0.16.2"
pandas = "^1.2.1"
seaborn = "0.12.2"
tiffile = "^2018.10.18"
typing-extensions = "4.8.0"
pyyaml = ">=6.0.1"
vispy = ">=0.13.0"
ipywidgets = "8.1.1"
zarr = "^2.16.1"
vizarr = "^0.0.1"
anywidget = "0.4.2"
imjoy = "^0.11.20"
xpublish = "0.3.0"

[tool.poetry.dev-dependencies]
pandas = "^1.2.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"